# DuckyVideo

./: CMakeLists.txt  README.md  VideoManager.cpp  VideoManager.hpp  main.cpp
